ABE: => Feature Update Minor changes.

--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ JWT_ACCESS_SECRET=secret
 JWT_REFRESH_SECRET=secret
 MAIL_EMAIL=zohaibch@yandex.com
 MAIL_PASSWORD=xkffyshzqtvdutsi
+BASE_URL=http://localhost:7000
+# BASE_URL=https://auto-traders-backend.vercel.app/
